# tbcdd

./: CMakeLists.txt  README.md  config.toml
src/: CMakeLists.txt  Wigner.h  config.toml  cpptoml_helper.cpp  cpptoml_helper.h  hamiltonian_tbc.h  mean_field.h  model.h  orbitals.h  parameters_tbc.h  parameters_util.cpp  parameters_util.h  rotation.h  slater_koster.h  spin_orbit.h  tbc.cpp  tbc.h  tbc_util.h  vec.h  wavevector.h
